crates/action-graph/tests/snapshots/action_graph_test__action_graph__install_deps__supports_plugins.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(typescript)" ]
    1 -> 0 [ ]
}
